--- a/src/styles/theme.css
+++ b/src/styles/theme.css
@@ -7,6 +7,7 @@
   --color-text-secondary: #857971;
   --color-surface: rgb(18 15 15);
   --color-surface-dark: rgb(15 12 12);
+  --color-surface-darker: rgb(12 9 9);
   --color-border: #2b1f1f;
   --color-header-bg: #1a1212;
 
